--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "electron-is-dev": "^1.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.8",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
-    "wait-on": "^3.3.0",
-    "webpack": "^4.39.3"
+    "wait-on": "^3.3.0"
   },
   "main": "public/electron.js",
   "scripts": {
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^4.39.1"
   }
 }
